argocd/manifests/prod/infra/tinyauth/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tinyauth
  namespace: tinyauth
  labels:
    app: tinyauth
    app.kubernetes.io/name: tinyauth
spec:
  serviceName: tinyauth
  replicas: 1

  podManagementPolicy: OrderedReady

  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0

  selector:
    matchLabels:
      app: tinyauth
  template:
    metadata:
      labels:
        app: tinyauth
        app.kubernetes.io/name: tinyauth
    spec:
      containers:
      - name: tinyauth
        image: ghcr.io/steveiliop56/tinyauth:v5.0.7
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "10m"
          limits:
            memory: "1Gi"
