argocd/manifests/prod/infra/tinyauth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinyauth
  namespace: tinyauth
  labels:
    app.kubernetes.io/name: tinyauth
spec:
  selector:
    app: tinyauth
  ports:
    - port: 3000 # Service port (others talk to)
      targetPort: 3000 # App listens here
  type: ClusterIP
