argocd/manifests/prod/infra/tinyauth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tinyauth
  labels:
    app: tinyauth
    app.kubernetes.io/name: tinyauth
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  ingressClassName: traefik
  rules:
  - host: tinyauth.pengiuns.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tinyauth
            port:
              number: 3000
  tls:
  - hosts:
      - tinyauth.pengiuns.com
    secretName: letsencrypt-wildcard-cert-pengiuns.com-production
